--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+boto==2.38.0
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.8.2
+django-storages==1.1.8
 django-toolbelt==0.0.1
 gunicorn==19.3.0
 Pillow==2.8.2
